Fix paragraph list items alignments

--- a/_styles/list.scss
+++ b/_styles/list.scss
@@ -28,3 +28,9 @@ li {
     text-align: left;
   }
 }
+
+@media (max-width: 768px) {
+  li p {
+    text-align: left !important;
+  }
+}
